--- a/mision-vision/index.html
+++ b/mision-vision/index.html
@@ -395,7 +395,7 @@
 
     <script>
       $(document).ready(function () {
-        let BASE_URL = "http://carip.goyeneche.test/";
+        let BASE_URL = "https//goyeneche.linox.net.pe/";
 
         //mision y vision
 
