--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "http://carip.goyeneche.test/";
+        const BASE_URL = "https//goyeneche.linox.net.pe/ ";
         //http://carip.goyeneche.test/api/sliders
 
         $.ajax({
@@ -769,9 +769,7 @@
               <div class="item">
                 <div class="thumb">
                   <img src="${value.photo_url}" alt="Thumb" />
-                  <div class="button">
-                    <a href="">Get Appoinment</a>
-                  </div>
+                 
                 </div>
                 <div class="info">
                   <h4>${value.full_name}</h4>
