--- a/publicaciones/index.html
+++ b/publicaciones/index.html
@@ -335,7 +335,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "http://carip.goyeneche.test/";
+        const BASE_URL = "https//goyeneche.linox.net.pe/";
 
         //http://carip.goyeneche.test/api/doctors
         $.ajax({
