--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "https//goyeneche.linox.net.pe";
+        const BASE_URL = "https://goyeneche.linox.net.pe";
         //http://carip.goyeneche.test/api/sliders
 
         $.ajax({
