--- a/autoridades/index.html
+++ b/autoridades/index.html
@@ -380,7 +380,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "https//goyeneche.linox.net.pe/";
+        const BASE_URL = "https://goyeneche.linox.net.pe/";
 
         //http://carip.goyeneche.test/api/autoriades
 
