--- a/objetivos/index.html
+++ b/objetivos/index.html
@@ -370,7 +370,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "https//goyeneche.linox.net.pe/";
+        const BASE_URL = "https://goyeneche.linox.net.pe/";
 
         // url: "http://carip.goyeneche.test/api/objetivos";
 
