--- a/orgamigrama/index.html
+++ b/orgamigrama/index.html
@@ -369,7 +369,7 @@
 
     <script>
       $(document).ready(function () {
-        let BASE_URL = "https//goyeneche.linox.net.pe/";
+        let BASE_URL = "https://goyeneche.linox.net.pe/";
 
         //organugrama
         $.ajax({
