--- a/quienes-somos/index.html
+++ b/quienes-somos/index.html
@@ -374,7 +374,7 @@
 
     <script>
       $(document).ready(function () {
-        const BASE_URL = "https//goyeneche.linox.net.pe/";
+        const BASE_URL = "https://goyeneche.linox.net.pe/";
 
       
         //http://carip.goyeneche.test/api/quienes-somos
