--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   </li>
 
                   <li>
-                    <a href="/">Doctores</a>
+                    <a href="/doctores/">Doctores</a>
                   </li>
 
                   <li class="dropdown">
@@ -588,7 +588,6 @@
     <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/imagesloaded.pkgd.min.js"></script>
     <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
     <script src="assets/js/circle-progress.js"></script>
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/bootsnav.js"></script>
