--- a/apoyo-al-diagnostico/index.html
+++ b/apoyo-al-diagnostico/index.html
@@ -261,6 +261,26 @@
     </div>
     <!-- End Breadcrumb -->
 
+        <!-- Start Our About
+    ============================================= -->
+    <div class="about-area features-area default-padding">
+      <!-- Shape -->
+      <div class="shape">
+        <img src="assets/img/shape/3.svg" alt="Shape" />
+      </div>
+      <!-- End Shape -->
+      <div class="container-medium">
+        <div class="about-items features-item-box">
+          <div class="row">
+            <div class="">
+              <div class="row specialty_list"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Our About -->
+
     <!-- Star Footer
     ============================================= -->
     <footer class="bg-dark text-light">
@@ -337,35 +357,36 @@
       $(document).ready(function () {
         const BASE_URL = "https://goyeneche.linox.net.pe/";
 
-        //http://carip.goyeneche.test/api/doctors
         $.ajax({
-          url: BASE_URL + "api/doctors",
+          url: BASE_URL + "api/apoyo-al-diagnostico",
           type: "GET",
           dataType: "json",
           success: function (data) {
-            console.log(data);
-            var htmlDoctorItem = "";
-
-            $.each(data, function (key, value) {
-              htmlDoctorItem += `
-              <div class="col-lg-4 col-md-6 single-item">
-              <div class="item">
-                <div class="thumb">
-                  <img src="${value.photo_url}" alt="Thumb" />
-                  <div class="button">
-                    <a href="">Get Appoinment</a>
+            var htmlContainer = "";
+            $.each(data, function (key, item) {
+              htmlContainer += `
+              <div class="col-lg-6 col-md-6 single-item mb-4">
+                <div class="item">
+                  <div class="thumb">
+                    <img src="${item.image_url}" alt="Thumb" class="w-100" />
+                  </div>
+                  <div class="content-box">
+                    <div class="info-title py-2">
+                      <h4><a href="#"> ${item.name}  </a></h4>
+                    </div>
+                  </div>
+                  <div class="info">
+                    <p>
+                     ${item.description}
+                    </p>
+        
                   </div>
                 </div>
-                <div class="info">
-                  <h4>${value.full_name}</h4>
-                  <span>${value.specialty_name}</span>
-                </div>
               </div>
-            </div>
               `;
             });
 
-            $(".doctor-items .row").html(htmlDoctorItem);
+            $(".specialty_list").html(htmlContainer);
           },
         });
 
